--- a/Setup/Dockerfile
+++ b/Setup/Dockerfile
@@ -19,11 +19,38 @@ RUN apt-get install -y python
 RUN apt-get install -y mono-xsp2 mono-xsp2-base
 
 RUN apt-get install -y mono-vbnc
-RUN apt-get install -y npm
-RUN apt-get install -y golang-go	
+
+RUN apt-get install curl -y
+RUN apt-get install -y sudo -y
+#RUN apt-get install build-essential libssl-dev -y
+
+#RUN apt-get install -y npm
+RUN apt-get install -y golang-go
+
+
+
+RUN apt-get install curl python-software-properties -y
+RUN curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
 RUN apt-get install -y nodejs
 
+RUN ln -s "$(which nodejs)" /usr/local/bin/node
+#
+### Create a nonroot user, and switch to it
+##RUN /usr/sbin/useradd --create-home --home-dir /usr/local/nonroot --shell /bin/bash nonroot
+##RUN /usr/sbin/adduser nonroot sudo
+##RUN chown -R nonroot /usr/local/
+##RUN chown -R nonroot /usr/lib/
+##RUN chown -R nonroot /usr/bin/
+##
+##USER nonroot
+##
+##RUN npm cache clean
+#USER root
+#RUN npm -g config set user root
+#RUN npm -g install nodegit
 
+RUN npm config set strict-ssl false
+RUN npm install -g underscore  request express jade shelljs passport http sys jquery lodash async mocha qunit moment connect validator restify ejs ws co when helmet wrench brain mustache should backbone forever  debug && export NODE_PATH=/usr/local/lib/node_modules/
 
 RUN apt-get install -y clojure1.4
 
@@ -52,9 +79,8 @@ RUN mkdir -p /opt/rust && \
     curl https://sh.rustup.rs -sSf | HOME=/opt/rust sh -s -- --no-modify-path -y && \
     chmod -R 777 /opt/rust
 
-RUN apt-get install -y sudo
+#RUN apt-get install -y sudo
 RUN apt-get install -y bc
 
-RUN sudo npm install -g underscore request express jade shelljs passport http sys jquery lodash async mocha moment connect validator restify ejs ws co when helmet wrench brain mustache should backbone forever  debug && export NODE_PATH=/usr/local/lib/node_modules/
 RUN echo "mysql ALL = NOPASSWD: /usr/sbin/service mysql start" | cat >> /etc/sudoers
 
